# house-price-prediction-with-mlops

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  demo.py  docker-compose.yml  main.py  pyproject.toml  requirements.txt  setup.py  template.py
.dvc/: config
.github/workflows/: main.yml
app/: main.py  schema.py  utils.py
data/: processed_data.parquet.dvc  raw_data.csv.dvc
models/: final_model.joblib.dvc  preprocessor.joblib.dvc
notebooks/: load_data_to_mongodb.ipynb
src/: config.py  data_ingestion.py  data_processing.py  exception.py  logger.py  train_model.py
tests/: test_data_processing.py  test_train_model.py
